--- a/integration-test/src/test/resources/log4j2.properties
+++ b/integration-test/src/test/resources/log4j2.properties
@@ -4,7 +4,7 @@
 #
 
 # Set to debug or trace if log4j initialization is failing
-status = warn
+status = info
 
 # Name of the configuration
 name = ConsoleLogConfigDemo
