--- a/dev/docker/hive/Dockerfile
+++ b/dev/docker/hive/Dockerfile
@@ -154,7 +154,7 @@ RUN rm -rf /tmp/packages
 
 ################################################################################
 # expose port
-EXPOSE 8088 50070 50075 10002 10000 8888 9083 7180 22
+EXPOSE 22 8088 9000 9083 10000 10002 50070 50075
 
 ################################################################################
 # create startup script and set ENTRYPOINT
