--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -20,7 +20,7 @@ jobs:
   # Integration test for AMD64 architecture
   test-amd64-arch:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 30
     strategy:
       matrix:
         architecture: [linux/amd64]
@@ -53,14 +53,14 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: '8.1.1'
+          gradle-version: '8.2'
 
       - name: Show gradle version
         run: gradle --version
 
       - name: Package Graviton
         run: |
-          gradle build
+          gradle build -x test
           gradle compileDistribution
 
       - name: Check docker container status
@@ -86,8 +86,7 @@ jobs:
       - name: Integration Test
         id: integrationTest
         run: |
-          gradle test -PtestMode=embedded
-          gradle test -PtestMode=deploy
+          gradle test --rerun-tasks -PtestMode=deploy
 
       - name: Print logs when Graviton integration tests failure
         if: ${{ failure() && steps.integrationTest.outcome == 'failure' }}
