--- a/conf/graviton.conf.template
+++ b/conf/graviton.conf.template
@@ -35,3 +35,9 @@ graviton.entity.store.kv.rocksdbPath = /tmp/graviton
 # THE CONFIGURATION FOR GRAVITON CATALOG
 # The interval in milliseconds to evict the catalog cache
 graviton.catalog.cache.evictionIntervalMs = 3600000
+
+# THE CONFIGURATION FOR AUXILIARY SERVICE
+# Auxiliary service names, seperate by ','
+graviton.auxService.auxServiceNames = iceberg-rest
+# Iceberg REST service classpath
+graviton.auxService.iceberg-rest.auxServiceClasspath = catalogs/lakehouse/libs
