--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,13 +33,13 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: '8.1.1'
+          gradle-version: '8.2'
 
       - name: Show gradle version
         run: gradle --version
 
       - name: Build with Gradle
-        run: gradle build
+        run: gradle build -PskipITs
 
       - name: Jacoco Report to PR
         id: jacoco
