--- a/dev/docker/trino/conf/log4j2.properties
+++ b/dev/docker/trino/conf/log4j2.properties
@@ -15,13 +15,10 @@ appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-# Log files location
-property.logPath = ${sys:gravitino.log.path}
-
 # File appender configuration
 appender.file.type = File
 appender.file.name = fileLogger
-appender.file.fileName = ${logPath}
+appender.file.fileName = gravitino-trino-connector.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
