--- a/integration-test/src/test/resources/log4j2.properties
+++ b/integration-test/src/test/resources/log4j2.properties
@@ -3,22 +3,31 @@
 # This software is licensed under the Apache License version 2.
 #
 
-status = warn
+# Set to debug or trace if log4j initialization is failing
+status = info
+
+# Name of the configuration
+name = ConsoleLogConfig
+
+# Console appender configuration
+appender.console.type = Console
+appender.console.name = consoleLogger
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 # Log files location
 property.basePath = ${sys:graviton.log.path}
 
-# RollingFileAppender name, pattern, path and rollover policy
-appender.rolling.type = RollingFile
-appender.rolling.name = fileLogger
-appender.rolling.fileName = ${basePath}/graviton-server.log
-appender.rolling.filePattern = ${basePath}/graviton-server_%d{yyyyMMdd}.log.gz
-appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%l] - %msg%n
-appender.rolling.policies.type = Policies
+# File appender configuration
+appender.file.type = File
+appender.file.name = fileLogger
+appender.file.fileName = ${basePath}/graviton-server.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 # Root logger level
 rootLogger.level = info
 
-# Root logger referring to console appender
-rootLogger.appenderRef.rolling.ref = fileLogger
+# Root logger referring to console and file appenders
+rootLogger.appenderRef.stdout.ref = consoleLogger
+rootLogger.appenderRef.file.ref = fileLogger
