[#437] feat(CI): Output integration test log to file (#439)
### What changes were proposed in this pull request?

+ Modify integration-test/test/resource/log4j2.properties
+ Print integration-test run log when CI failed in the GitHub Action.

### Why are the changes needed?

Currently, When you execute an `integration-test` test, It doesn't
output log in the local and GitHub Action.

Fix: #437

### Does this PR introduce _any_ user-facing change?

N/A

### How was this patch tested?

CI Passed

--- a/integration-test/src/test/resources/log4j2.properties
+++ b/integration-test/src/test/resources/log4j2.properties
@@ -7,7 +7,7 @@
 status = info
 
 # Name of the configuration
-name = ConsoleLogConfigDemo
+name = ConsoleLogConfig
 
 # Console appender configuration
 appender.console.type = Console
@@ -15,8 +15,19 @@ appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
+# Log files location
+property.basePath = ${sys:graviton.log.path}
+
+# File appender configuration
+appender.file.type = File
+appender.file.name = fileLogger
+appender.file.fileName = ${basePath}/graviton-server.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
 # Root logger level
 rootLogger.level = info
 
-# Root logger referring to console appender
+# Root logger referring to console and file appenders
 rootLogger.appenderRef.stdout.ref = consoleLogger
+rootLogger.appenderRef.file.ref = fileLogger
