--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ commons-io = "2.11.0"
 caffeine = "2.9.3"
 rocksdbjni = "7.7.3"
 iceberg = '1.3.1'
+trino = '426'
 
 protobuf-plugin = "0.9.2"
 spotless-plugin = '6.11.0'
@@ -78,6 +79,8 @@ commons-io = { group = "commons-io", name = "commons-io", version.ref = "commons
 caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version.ref = "caffeine" }
 rocksdbjni = { group = "org.rocksdb", name = "rocksdbjni", version.ref = "rocksdbjni" }
 iceberg-core = { group = "org.apache.iceberg", name = "iceberg-core", version.ref = "iceberg" }
+trino-spi= { group = "io.trino", name = "trino-spi", version.ref = "trino" }
+trino-toolkit= { group = "io.trino", name = "trino-plugin-toolkit", version.ref = "trino" }
 
 [bundles]
 log4j = ["slf4j-api", "log4j-slf4j2-impl", "log4j-api", "log4j-core", "log4j-12-api"]
