[#440] refactor(server): Move jetty server related code to new module (#475)
### What changes were proposed in this pull request?

This PR proposes to move Jetty server related code to a new module
`server-common`, which can be leveraged by both `server` and
`lakehouse-iceberg` module.

### Why are the changes needed?

Currently, in Graviton, we will both have Jetty Server in two different
modules, which introduces several duplicated codes and make it hard to
maintain. So here proposes to unify the codes into one place.

Fix: #440 

### Does this PR introduce _any_ user-facing change?

No.
### How was this patch tested?

Existing UT and ITs.

--- a/conf/graviton.conf.template
+++ b/conf/graviton.conf.template
@@ -37,7 +37,11 @@ graviton.entity.store.kv.rocksdbPath = /tmp/graviton
 graviton.catalog.cache.evictionIntervalMs = 3600000
 
 # THE CONFIGURATION FOR AUXILIARY SERVICE
-# Auxiliary service names, seperate by ','
+# Auxiliary service names, separate by ','
 graviton.auxService.names = iceberg-rest
 # Iceberg REST service classpath
 graviton.auxService.iceberg-rest.classpath = catalogs/lakehouse-iceberg/libs
+# Iceberg REST service host
+graviton.auxService.iceberg-rest.host = 127.0.0.1
+# Iceberg REST service http port
+graviton.auxService.iceberg-rest.httpPort = 9001
