--- a/integration-test/src/test/resources/log4j2.properties
+++ b/integration-test/src/test/resources/log4j2.properties
@@ -21,7 +21,7 @@ property.basePath = ${sys:graviton.log.path}
 # File appender configuration
 appender.file.type = File
 appender.file.name = fileLogger
-appender.file.fileName = ${basePath}/graviton-server.log
+appender.file.fileName = ${basePath}/integration-test.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
