Changes according to discussion

--- a/catalogs/catalog-lakehouse-iceberg/src/main/resources/lakehouse-iceberg.properties
+++ b/catalogs/catalog-lakehouse-iceberg/src/main/resources/lakehouse-iceberg.properties
@@ -4,5 +4,5 @@
 #
 
 ## This file holds common properties for Iceberg catalog. The format of the key is
-## 'graviton.catalog.iceberg.{iceberg-inner-config-key}' and `iceberg-inner-config-key` is the
+## 'graviton.bypass.{iceberg-inner-config-key}' and `iceberg-inner-config-key` is the
 ## key in the iceberg catalog configuration file.
