--- a/catalogs/catalog-lakehouse-iceberg/src/main/resources/lakehouse-iceberg.conf
+++ b/catalogs/catalog-lakehouse-iceberg/src/main/resources/lakehouse-iceberg.conf
@@ -3,6 +3,6 @@
 # This software is licensed under the Apache License version 2.
 #
 
-## This file holds common properties for Iceberg catalog. The format of the key is
+## This file holds common configurations for Lakehouse-iceberg catalog. The format of the key is
 ## 'graviton.bypass.{iceberg-inner-config-key}' and `iceberg-inner-config-key` is the
-## key in the iceberg catalog configuration file.
+## real key in the pass to Lakehouse-iceberg catalog.
