--- a/catalogs/catalog-lakehouse-iceberg/src/main/resources/lakehouse-iceberg.conf
+++ b/catalogs/catalog-lakehouse-iceberg/src/main/resources/lakehouse-iceberg.conf
@@ -5,4 +5,4 @@
 
 ## This file holds common configurations for Lakehouse-iceberg catalog. The format of the key is
 ## 'graviton.bypass.{iceberg-inner-config-key}' and `iceberg-inner-config-key` is the
-## real key in the pass to Lakehouse-iceberg catalog.
+## real key that pass to Lakehouse-iceberg catalog.
