--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ rocksdbjni = "7.7.3"
 iceberg = '1.3.1'
 trino = '426'
 spark = "3.4.1"
+scala-collection-compat = "2.7.0"
 
 
 protobuf-plugin = "0.9.2"
@@ -91,6 +92,7 @@ trino-toolkit= { group = "io.trino", name = "trino-plugin-toolkit", version.ref 
 trino-testing= { group = "io.trino", name = "trino-testing", version.ref = "trino" }
 iceberg-spark-runtime = { group = "org.apache.iceberg", name = "iceberg-spark-runtime-3.4_2.13", version.ref = "iceberg" }
 spark-sql = { group = "org.apache.spark", name = "spark-sql_2.13", version.ref = "spark" }
+scala-collection-compat =  { group = "org.scala-lang.modules", name = "scala-collection-compat_2.13", version.ref = "scala-collection-compat" }
 
 
 [bundles]
