--- a/.github/workflows/publish-gravitino.yml
+++ b/.github/workflows/publish-gravitino.yml
@@ -1,4 +1,4 @@
-name: Publish Docker Image
+name: Publish Gravitino to OSSRH
 
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
