--- a/.github/workflows/publish-gravitino.yml
+++ b/.github/workflows/publish-gravitino.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+
       - name: Check publish username and password
         run: |
           if [ "${SONATYPE_USER}" = "" ] || [ "${SONATYPE_PASSWORD}" = "" ]; then
