Change branch that can trigger publish pipeline

--- a/.github/workflows/publish-gravitino.yml
+++ b/.github/workflows/publish-gravitino.yml
@@ -3,7 +3,7 @@ name: Publish Gravitino to OSSRH
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "*" ]
+    branches: [ "branch-*", "test*" ]
 
 jobs:
   publish-gravitino:
