--- a/.github/workflows/publish-gravitino.yml
+++ b/.github/workflows/publish-gravitino.yml
@@ -1,7 +1,7 @@
 name: Publish Gravitino to OSSRH
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push events only for the release branches(branch-*) and test branches(test*)
   push:
     branches: [ "branch-*", "test*" ]
 
@@ -15,7 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-
       - uses: actions/setup-java@v3
         with:
           java-version: '8'
@@ -24,10 +23,9 @@ jobs:
       - name: Check publish username and password
         run: |
           if [ "${SONATYPE_USER}" = "" ] || [ "${SONATYPE_PASSWORD}" = "" ]; then
-            echo "Username or password is empty. Please re-enter try to set it by OSSRH_USERNAME and OSSRH_PASSWORD. "
+            echo "Username or password is empty. Please try to set github action secret OSSRH_USERNAME and OSSRH_PASSWORD. "
             exit 1
           fi
 
-      - name: Clean, build and publish the release(branch-xxxx) branch
-        run: |
-            ./gradlew clean build publish
+      - name: Clean, build and publish the release(branch-*) branch
+        run: ./gradlew clean build publish
