Add --info flag

--- a/.github/workflows/publish-gravitino.yml
+++ b/.github/workflows/publish-gravitino.yml
@@ -28,4 +28,4 @@ jobs:
           fi
 
       - name: Clean, build and publish the release(branch-*) branch
-        run: ./gradlew clean build publish
+        run: ./gradlew clean build publish --info
