--- a/conf/gravitino-env.sh.template
+++ b/conf/gravitino-env.sh.template
@@ -11,3 +11,4 @@
 # export GRAVITINO_CONF_DIR
 # export GRAVITINO_LOG_DIR     # Where log files are stored.  PWD by default.
 # export GRAVITINO_MEM         # Gravitino jvm mem options Default -Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m
+HADOOP_USER_NAME=gravitino
