--- a/dev/docker/trino/conf/node.properties
+++ b/dev/docker/trino/conf/node.properties
@@ -2,6 +2,6 @@
 # Copyright 2023 Datastrato.
 # This software is licensed under the Apache License version 2.
 #
-node.environment=docker
-node.data-dir=/data/trino
-plugin.dir=/usr/lib/trino/plugin
+node.environment = docker
+node.data-dir = /data/trino
+plugin.dir = /usr/lib/trino/plugin
