--- a/dev/docker/trino/conf/catalog/gravitino.properties.template
+++ b/dev/docker/trino/conf/catalog/gravitino.properties.template
@@ -2,6 +2,6 @@
 # Copyright 2023 Datastrato.
 # This software is licensed under the Apache License version 2.
 #
-connector.name=gravitino
-gravitino.uri=http://GRAVITINO_HOST_IP:GRAVITINO_HOST_PORT
-gravitino.metalake=GRAVITINO_METALAKE_NAME
+connector.name = gravitino
+gravitino.uri = http://GRAVITINO_HOST_IP:GRAVITINO_HOST_PORT
+gravitino.metalake = GRAVITINO_METALAKE_NAME
