--- a/dev/docker/trino/conf/config.properties
+++ b/dev/docker/trino/conf/config.properties
@@ -3,14 +3,14 @@
 # This software is licensed under the Apache License version 2.
 #
 #single node install config
-#coordinator=true
-#node-scheduler.include-coordinator=true
-#http-server.http.port=8080
-#discovery-server.enabled=true
-#discovery.uri=http://localhost:8080
-#protocol.v1.alternate-header-name=Presto
-#hive.hdfs.impersonation.enabled=true
-coordinator=true
-node-scheduler.include-coordinator=true
-http-server.http.port=8080
-discovery.uri=http://0.0.0.0:8080
+#coordinator = true
+#node-scheduler.include-coordinator = true
+#http-server.http.port = 8080
+#discovery-server.enabled = true
+#discovery.uri = http://localhost:8080
+#protocol.v1.alternate-header-name = Presto
+#hive.hdfs.impersonation.enabled = true
+coordinator = true
+node-scheduler.include-coordinator = true
+http-server.http.port = 8080
+discovery.uri = http://0.0.0.0:8080
