--- a/dev/docker/trino/conf/log.properties
+++ b/dev/docker/trino/conf/log.properties
@@ -2,5 +2,5 @@
 # Copyright 2023 Datastrato.
 # This software is licensed under the Apache License version 2.
 #
-# Enable verbose logging from Presto
-io.trino=INFO
+# Enable verbose logging from Trino
+io.trino = INFO
