Change the version to 0.2.1-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.parallel=true
 org.gradle.caching=true
 
 #version that is going to be updated automatically by releases
-version = 0.2.0
+version = 0.2.1-SNAPSHOT
 
 #sonatype credentials
 SONATYPE_USER = admin
