improvement(frontend): Add docker runtime enviroment in the frontend

--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "build:icons": "node src/iconify-bundle/bundle-icons-react.js",
     "rm:cache": "rm -rf ./out/ && rm -rf ./node_modules/ && rm -rf ./yarn.lock && yarn cache clean",
-    "deploy": "yarn install && yarn export"
+    "deploy": "yarn install && yarn export",
+    "docker:export": "yarn deploy",
+    "docker:dev": "yarn install && yarn dev"
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
