--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "axios-mock-adapter": "1.22.0",
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
+    "dayjs": "^1.11.10",
     "next": "^14.0.2",
     "nprogress": "0.2.0",
     "react": "18.2.0",
