--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/node_modules/
 /.pnp
 .pnp.js
 
@@ -11,6 +11,7 @@
 # next.js
 /.next/
 /out/
+/dist/
 
 # production
 /build
