--- a/web/.gitignore
+++ b/web/.gitignore
@@ -5,10 +5,39 @@
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-.gradle
-.next
-.node
-.vscode
-build
-node_modules
-dist
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+/.node
+
+/.gradle
+
+# testing
+/coverage
+
+# next.js
+/.next
+/out
+/dist
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
