--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
-  // JS
+  // ** JS
   "javascript.updateImportsOnFileMove.enabled": "always",
-  // JSON
+  // ** JSON
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
-  // Extension: Git
+  // ** Extension: Git
   "git.rebaseWhenSync": true,
   "git.autofetch": true,
   "git.enableSmartCommit": true,
-  // Extension: Prettier
+  // ** Extension: Prettier
   "prettier.requireConfig": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  // Extension: ESLint
+  // ** Extension: ESLint
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
     "source.organizeImports": false,
@@ -28,10 +28,9 @@
     "typescriptreact"
   ],
   "eslint.format.enable": true,
-  // Package manager Configs
-  "eslint.packageManager": "yarn",
+  // ** Package manager Configs
   "npm.packageManager": "yarn",
-  // Extension: cSpell
+  // ** Extension: cSpell
   "cSpell.words": [
     "Alata",
     "Cheyne",
