[#793] feat(UI): replace mock data to real data

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -49,7 +49,8 @@
     "nprogress",
     "reduxjs",
     "Roboto",
-    "Segoe"
+    "Segoe",
+    "tabler"
   ],
   "search-node-modules.path": "node_modules",
   "markdown.extension.toc.updateOnSave": false
