--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.1.3",
+    "react-use": "^17.4.0",
     "yup": "1.3.2"
   },
   "devDependencies": {
